<resources>
    <string name="app_name">udacity-court-counter-app</string>
    <string name="app_title">BasketBall Scoreboard</string>
    <string name="_3_points">+3 Points</string>
    <string name="_2_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="zero">0</string>
    <string name="team_a_text">Team A</string>
    <string name="team_b_text">Team B</string>
    <string name="reset_button_text">reset</string>
</resources>
